Change prod taxvalut to BigDecimal